x/programs/rust/sdk-macros/tests/ui/fail/first-param.rs
use sdk_macros::public;

#[public]
pub fn test(a: u32) {}

fn main() {}
